<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true"
        android:background="?attr/colorSurface">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            app:titleEnabled="false">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_image_carousel"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fitsSystemWindows="true"
                android:clipToPadding="false"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorSurface"
                app:navigationIconTint="?attr/colorOnSurface"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_types"
                    android:textColor="?attr/colorOnSurface"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:chipSpacingHorizontal="8dp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    style="@style/Widget.Material3.CardView.Filled"
                    app:cardBackgroundColor="?attr/colorSurfaceVariant"
                    app:cardCornerRadius="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="16dp"
                        android:baselineAligned="false"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_detail_weight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?attr/colorOnSurfaceVariant"
                                android:textAppearance="?attr/textAppearanceTitleLarge"
                                android:textStyle="bold"
                                tools:text="69 kg" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_weight"
                                android:textColor="?attr/colorOnSurfaceVariant"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_detail_height"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?attr/colorOnSurfaceVariant"
                                android:textAppearance="?attr/textAppearanceTitleLarge"
                                android:textStyle="bold"
                                tools:text="0.7 m" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_height"
                                android:textColor="?attr/colorOnSurfaceVariant"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_detail_base_exp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?attr/colorOnSurfaceVariant"
                                android:textAppearance="?attr/textAppearanceTitleLarge"
                                android:textStyle="bold"
                                tools:text="64" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_base_exp"
                                android:textColor="?attr/colorOnSurfaceVariant"
                                android:textAppearance="?attr/textAppearanceBodyMedium" />
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_abilities"
                    android:textColor="?attr/colorOnSurface"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_abilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    tools:text="Overgrow, Chlorophyll" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_about"
                    android:textColor="?attr/colorOnSurface"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:lineSpacingExtra="4dp"
                    tools:text="A strange seed was planted on its back at birth. The plant sprouts and grows with this POKéMON." />

                <TextView
                    android:id="@+id/tv_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    tools:text="Species: bulbasaur" />

                <TextView
                    android:id="@+id/tv_forms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    tools:text="Forms: bulbasaur" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_evolution_chain"
                    android:textColor="?attr/colorOnSurface"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_evolution_chain"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_carousel_pokemon" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_moves"
                    android:textColor="?attr/colorOnSurface"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_moves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:chipSpacingHorizontal="8dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_base_stats"
                    android:textColor="?attr/colorOnSurface"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>
